# RDX

./: .gitignore  BUILD.md  BUILD_ISSUES.md  BUILD_POWERSHELL.md  BUILD_WITH_DEV_CMD.md  CMakeLists.txt  INSTALL_QT_MSVC.md  INSTALL_VS2022.md  INSTALL_VS2022_CPP.md  LICENSE  QUICKSTART.md  README.md  run_rdx_gui.ps1
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  LCM_SCHEMA.md  RDX_FORMAT.md  SCHEMA_DSL.md
scripts/: install-dependencies-linux.sh  install-dependencies-macos.sh  install-dependencies-windows.ps1
src/app/: CMakeLists.txt  main.cpp
src/app/controllers/: CompressionController.cpp  CompressionController.h
src/app/ui/: CorpusDashboardView.qml  FileChooserView.qml  JobListView.qml  RdxMainWindow.qml  RdxMainWindow_minimal.qml  RdxMainWindow_simple.qml  RdxTheme.qml  SettingsView.qml  qml.qrc
src/app/viewmodels/: JobViewModel.cpp  JobViewModel.h  LCMStatsViewModel.cpp  LCMStatsViewModel.h
src/core/: CMakeLists.txt  rdx_core_export.h.in
src/core/compression/: CompressionEngine.cpp  CompressionEngine.h
src/core/container/: RDXReader.cpp  RDXReader.h  RDXWriter.cpp  RDXWriter.h
src/core/decompression/: DecompressionEngine.cpp  DecompressionEngine.h
src/core/detectors/: FileTypeDetector.cpp  FileTypeDetector.h
src/core/lcm/: LCMManager.cpp  LCMManager.h
src/core/schemas/: SchemaDefinition.cpp  SchemaDefinition.h  SchemaRegistry.cpp  SchemaRegistry.h
src/core/schemas/parsers/: CSVParser.cpp  CSVParser.h  ChunkedBinaryParser.cpp  ChunkedBinaryParser.h  ISchemaParser.h  JSONParser.cpp  JSONParser.h  KVConfigParser.cpp  KVConfigParser.h  LogParser.cpp  LogParser.h  PE32Parser.cpp  PE32Parser.h  UnstructuredBinaryParser.cpp  UnstructuredBinaryParser.h
src/core/util/: ByteBuffer.cpp  ByteBuffer.h  HashUtils.cpp  HashUtils.h  TimeUtils.cpp  TimeUtils.h
tests/: CMakeLists.txt
